fix-static-resource in swagger ui